@@ -11,6 +11,7 @@ in stats plugin
 - Remove minimum vertical size of URL requester in torrent creation dialog,
 this makes sure that it is sized properly when you open the dialog
 - Fix changing text codec for multifile torrents (158775)
+- Fix crash in handling of KResolverResults (158940)
 
 Changes in 3.O :
 - Fix sorting of upload and download rate (157939)
